tests/invalid/depth05.h
#include "depth06.h"
